# unicode_obfuscate

./: README.md  pyproject.toml
tests/: test_unicode_obfuscate.py
unicode_obfuscate/: __init__.py
unicode_obfuscate/data/: confusables.json  intentional.json
utils/: utils.py
