[tool.poetry]
name = "unicode_obfuscate"
version = "0.1.1"
description = "Replace unicode characters with visually similar ones."
authors = ["Lucas Bellomo <lbellomo@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/lbellomo/unicode_obfuscate"
include = ["unicode_obfuscate/data/*.json"]
exclude = ["utils"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
